# Xjie_andro

./: .gitignore  AI对话交互方式调研报告.md  README.md  Xjie项目功能与架构总结.md  devlog.md  gen_icon.py
Android/: build.gradle.kts  (+2 more)
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0003_intervention_levels.py  0009_feature_flags_skills.py  0010_literature.py  0012_user_settings_glucose_unit.py  0013_feature_parity.py
backend/app/models/: __init__.py  device_token.py  exercise_log.py  feature_flag.py  feature_parity.py  health_document.py  literature.py  password_reset_code.py  user_indicator_value.py  user_settings.py
backend/app/providers/: base.py  openai_provider.py
backend/app/routers/: admin.py  auth.py  chat.py  exercise.py  health_data.py  health_reports.py  indicators_extra.py  literature.py  meals.py  push.py  users.py
backend/app/schemas/: chat.py  feature_flag.py  feature_parity.py  health_document.py  literature.py  meal.py  settings.py  user.py
backend/app/services/: agent_service.py  cgm_service.py  context_builder.py  feature_service.py  glucose_sync.py  health_summary_service.py  meal_service.py  patient_history_service.py  push_service.py
backend/app/services/literature/: __init__.py  claim_extractor.py  embedding.py  ingest.py  pubmed_fetcher.py  retrieval.py
backend/app/static/: admin.html
backend/app/utils/: glucose_units.py
backend/app/workers/: celery_app.py  literature_ingest.py  literature_seeds.json  push_tasks.py
(+191 files in other folders)
